Modifiquei as páginas de gerenciamento

--- a/producao.html
+++ b/producao.html
@@ -52,7 +52,7 @@
             <!------------------------------Página com as informações de cada safra:------------------------------------>
             <section>
                 <div id="conteudo-1" class="conteudo">
-                    <div class="imagem-producao"><img class="imagem-producao" src="./Imagens-Geral/imagem-producao.png">
+                    <div class="imagem-producao"><img src="./Imagens-Geral/imagem-producao.png">
                     </div>
 
                     <fieldset class="informacao-safra">
@@ -137,8 +137,6 @@
 
                     <h1 id="titulo-conteudo">Gerenciamento das Áreas de Produção</h1>
 
-                    <div class="imagem-producao"><img src="./Imagens-Geral/figura2.png"></div>
-
                     <label> Buscar produtividade por área:
                         <input class="inBarraPesquisa" type="search" placeholder="Buscar área" list="areas">
                         <datalist id="areas">
@@ -157,6 +155,7 @@
                     <input type="button" value="Buscar 🔎" id="btPesquisar" class="button">
 
 
+                    <div class="imagem-producao"><img src="./Imagens-Geral/figura2.png"></div>
                     <h2 id="titulo2">Selecione uma <strong>área</strong> <br>para mais informações!</h2>
 
                     <table class="tabela">
